--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/android": "^7.4.2",
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
+    "@capacitor/geolocation": "^7.1.4",
     "@ionic/vue": "^8.6.5",
     "@ionic/vue-router": "^8.6.5",
     "vue": "^3.5.17",
