--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,25 +1,43 @@
 apply plugin: 'com.android.application'
+import java.util.Properties
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file("keystore.properties") // สร้างไฟล์นี้ขึ้นมา
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 
 android {
-    namespace "com.example.myapp"
+    namespace "com.kimhun55.ionic"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.example.myapp"
+       applicationId "com.kimhun55.ionic"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
-             // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
-             // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
+            // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
+            // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
     }
+     signingConfigs {
+        create("release") {
+            keyAlias = 'upload'
+            keyPassword = 'CardApp2025!'
+            storeFile = file(rootProject.file('upload-keystore.jks'))
+            storePassword = 'CardApp2025!'
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            
         }
     }
 }
