--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,27 +1,22 @@
 apply plugin: 'com.android.application'
-import java.util.Properties
-def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file("keystore.properties") // สร้างไฟล์นี้ขึ้นมา
-if (keystorePropertiesFile.exists()) {
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-}
 
 android {
     namespace "com.kimhun55.ionic"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-       applicationId "com.kimhun55.ionic"
+        applicationId "com.kimhun55.ionic"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
-            // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
-            // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
+             // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
+             // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
     }
+
      signingConfigs {
         create("release") {
             keyAlias = 'upload'
@@ -40,6 +35,12 @@ android {
             
         }
     }
+    // buildTypes {
+    //     release {
+    //         minifyEnabled false
+    //         proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    //     }
+    // }
 }
 
 repositories {
