--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/geolocation": "^7.1.4",
+    "@capacitor/push-notifications": "^7.0.1",
     "@ionic/vue": "^8.6.5",
     "@ionic/vue-router": "^8.6.5",
+    "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
