--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,17 @@
             android:launchMode="singleTask"
             android:exported="true">
 
+
+            <!-- Deep Link: Universal/App Links (แก้ host เป็นโดเมนจริงของคุณ) -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="https" android:host="vue.kimhun55.com" />
+                <!-- เพิ่ม host อื่นได้ เช่น www.your.domain -->
+                <!-- <data android:scheme="https" android:host="www.your.domain" /> -->
+            </intent-filter>
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
